2015-03-18 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: countPages return at least one when the mask is
	not empty (this could happen when all the elements are on the same
	page)

2015-03-18 John Wu <John dot Wu at ACM dot org>
	* win: convert *.vcproj to *.vcxproj, update ibis.sln, rename the
	old file as ibis-vc8.sln

2015-03-11 John Wu <John dot Wu at ACM dot org>
	* src/iapi.cpp: add print statements to public functions

2015-03-04 John Wu <John dot Wu at ACM dot org>
	* src/colValues.cpp: review all sorting functions to check for the
	condition identified by Divya

2015-03-04 Divya Chandrasekar <chadivya at a9 dot com>
	* src/colValues.cpp: add statement to sort the second half of the
	list of strings

2015-03-02 John Wu <John dot Wu at ACM dot org>
	* example/tiapi.c:476 logical error, "nv=n;" should have been
	"nv=n+n;"
	* src/iapi.h: add functions
	fastbit_iapi_register_selection_as_bit_array and
	fastbit_iapi_extend_bit_array_with_selection

2015-02-28 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h:781 nbits should have been active.nbits

2015-02-26 John Wu <John dot Wu at ACM dot org>
	* bitvector.cpp:602 ns should be nb - this causes bad bug in the
	indexes

2015-02-25 Justin Swanhart <greenlion at gmail dot com>
	* src/tafel.cpp: patch writeData to correctly print the number of
	rows handles
	* src/ibis.cpp: change reorder function to walk through all
	subdirectories

2015-02-24 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: prevent column::append to work with index only
	column, in copy constructor, copy index as well as data values
	* examples/tiapi.c: move the code that makes a3 index only in
	queryarray2 to after the doubling of data

2015-02-22 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: update bord::column::append to handle column type
	BIT following the new storage scheme

2015-02-21 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp:19568 "cols[i] == 0" should be "cols[i] != 0"