@@ -49,8 +49,14 @@ if (${HOSTNAME} =~ m/^bit/) {
   # on other NERSC machines, use the GNU compilers, no debugging
   use Env qw(NERSC_HOST);
   $cmd="./configure --prefix=/project/projectdirs/m1248/${NERSC_HOST}/gnu --without-getpwuid --with-quiet-nan --disable-debug --enable-xopt";
-} else {	# use all default options on generic linux/unix machines
-  $cmd="./configure --prefix=${PWD}/installed";
+} else {	# based on machine type
+  $HOSTTYPE=`uname`;
+#  if (${HOSTTYPE} =~ m/CYGWIN/i || ${HOSTTYPE} =~ m/MINGW/i) {
+#    $cmd="./configure --prefix=${PWD}/installed CXXFLAGS='-O2 -g -std=gnu++0x -U__STRICT_ANSI__'";
+#  }
+#  else { # default options on generic linux/unix machines
+    $cmd="./configure --prefix=${PWD}/$HOSTTYPE";
+#  }
 }
 print "$cmd\n\n";
 system($cmd);
