@@ -9,22 +9,19 @@
 #pragma warning(disable:4786)   // some identifier longer than 256 characters
 #include <direct.h>     // _rmdir
 #endif
-#if defined(__unix__) || defined(__HOS_AIX__) || defined(__APPLE__) || defined(_XOPEN_SOURCE) || defined(_POSIX_C_SOURCE) || defined(__MINGW__) || defined(__MINGW32__) || defined(__MINGW64__) || defined(__CYGWIN__)
-#include <unistd.h>     // getuid, rmdir, sysconf, popen, pclose
+#if defined(__unix__) || defined(__HOS_AIX__) || defined(__APPLE__) || defined(_XOPEN_SOURCE) || defined(_POSIX_C_SOURCE) || defined(__MINGW__) || defined(__MINGW32__) || defined(__MINGW64__)
+#if defined(HAVE_GETPWUID) && !(defined(__MINGW__) || defined(__MINGW32__) || defined(__MINGW64__))
+#include <pwd.h>        // getpwuid
+#endif
+#include <unistd.h>     // getuid, rmdir, sysconf
 #include <sys/stat.h>   // stat
-#include <dirent.h>     // DIR, opendir, readdir
+#include <dirent.h>     // opendir, readdir
 #endif
 
 #include "util.h"
 #include "horometer.h"
 #include "resource.h"
 #include <stdarg.h>     // vsprintf
-#if defined(__unix__) || defined(__HOS_AIX__) || defined(__APPLE__) || defined(_XOPEN_SOURCE) || defined(_POSIX_C_SOURCE)
-#include <pwd.h>        // getpwuid
-#include <unistd.h>     // getuid, rmdir, sysconf
-#include <sys/stat.h>   // stat
-#include <dirent.h>     // opendir, readdir
-#endif
 
 #include <set>          // std::set
 #include <limits>       // std::numeric_limits
@@ -1820,7 +1817,7 @@ const char* ibis::util::userName() {
         char buf[64];
         if (GetUserName(buf, &len))
             uid = buf;
-#elif defined(__MINGW32__)
+#elif defined(__MINGW__) || defined(__MINGW32__) || defined(__MINGW64__)
         // MinGW does not have support for user names?!
 #elif defined(HAVE_GETPWUID)
 #if (defined(HAVE_GETPWUID_R) || defined(_REENTRANT) || \
